src/test/deca/syntax/invalid/resultats/test39_decl_method-synt.res
./src/test/deca/syntax/invalid/test39_decl_method.deca:16:13: no viable alternative at input 'privateintfct'
